--- a/src/qjacktrip.ui
+++ b/src/qjacktrip.ui
@@ -19,6 +19,59 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QComboBox" name="typeComboBox">
+      <property name="toolTip">
+       <string/>
+      </property>
+      <item>
+       <property name="text">
+        <string>Client</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Server</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Hub Client</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Hub Server</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="addressLabel">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string>&amp;Address of server</string>
+      </property>
+      <property name="buddy">
+       <cstring>addressEdit</cstring>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="typeLabel">
+      <property name="text">
+       <string>&amp;Run JackTrip as</string>
+      </property>
+      <property name="buddy">
+       <cstring>typeComboBox</cstring>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="addressEdit"/>
+    </item>
     <item row="5" column="0" colspan="2">
      <layout class="QHBoxLayout" name="buttonLayout">
       <item>
@@ -49,66 +102,6 @@
        </widget>
       </item>
      </layout>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="addressLabel">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="text">
-       <string>&amp;Address of server</string>
-      </property>
-      <property name="buddy">
-       <cstring>addressEdit</cstring>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="typeLabel">
-      <property name="text">
-       <string>&amp;Run JackTrip as</string>
-      </property>
-      <property name="buddy">
-       <cstring>typeComboBox</cstring>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="typeComboBox">
-      <property name="toolTip">
-       <string/>
-      </property>
-      <item>
-       <property name="text">
-        <string>Client</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Server</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Hub Client</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Hub Server</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QLabel" name="ipLabel">
-      <property name="text">
-       <string>Looking up external IP address...</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="addressEdit"/>
     </item>
     <item row="4" column="0" colspan="2">
      <widget class="QTabWidget" name="optionsTabWidget">
@@ -312,6 +305,12 @@
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="queueLengthLabel">
+          <property name="maximumSize">
+           <size>
+            <width>126</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="text">
            <string>&amp;Queue Buffer Length</string>
           </property>
@@ -452,6 +451,13 @@
       </widget>
      </widget>
     </item>
+    <item row="2" column="1">
+     <widget class="QLabel" name="ipLabel">
+      <property name="text">
+       <string>Looking up external IP address...</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -468,7 +474,6 @@
  </widget>
  <tabstops>
   <tabstop>typeComboBox</tabstop>
-  <tabstop>addressEdit</tabstop>
   <tabstop>connectButton</tabstop>
   <tabstop>disconnectButton</tabstop>
   <tabstop>exitButton</tabstop>
